--- a/index.html
+++ b/index.html
@@ -1027,6 +1027,8 @@ Error message and password prompt
 
 <li>מהמטבח של אייל שני</li>
 
+<li>מהמרפסת המזרחית של גיא</li>
+
 <li>מוזיקה</li>
 
 <li>מוזנח זה המטופח החדש</li>
@@ -9287,7 +9289,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20201101150419877" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20210102112501454" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20210128120039859" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9296,7 +9298,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[מהחלון של המטבח 2]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מהמרפסת המזרחית של גיא]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10746,7 +10748,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20210104141052024" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20210127184157103" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -16429,6 +16431,16 @@ We rise to play a greater part.
 
 
 </pre>
+</div>
+<div created="20210127183359253" modified="20210128122411512" tags="[[כאן בגטו]] בתים [[הלכות קורונה]] [[אחיות חוץ]] חבר" title="מהמרפסת המזרחית של גיא">
+<pre>[img[pictures/guyseasternbalcony.jpg]]
+
+!!![[אימא של ג'אז]]:
+
+ככה תוך כדי שנת הקורונה, גיא הספיק לארגן הכל ולעבור לחיפה, ואני מתגעגעת.
+
+
+&lt;&lt;englink [[From Guy's eastern balcony]]&gt;&gt;</pre>
 </div>
 <div created="20180205175902513" modified="20200212204951293" tags="[[כמה שירים כבר אפשר להמציא בכלל]]" title="מוזיקה">
 <pre>[img[pictures/music.jpg]]
