--- a/english.html
+++ b/english.html
@@ -531,6 +531,8 @@ Error message and password prompt
 
 <li>From Eyal Shani's kitchen</li>
 
+<li>From Guy's eastern balcony</li>
+
 <li>From the kitchen's window</li>
 
 <li>From the kitchen's window 2</li>
@@ -9206,7 +9208,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[From the kitchen's window 2]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11479,7 +11481,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20210104140956490" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20210127184052229" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -11548,6 +11550,15 @@ The corona times have brought about a new routine to the tribal campfire, such a
 
 </pre>
 </div>
+<div created="20210127183851311" modified="20210127184335142" tags="[[Here in the Ghetto]] Houses [[Corona beings]]" title="From Guy's eastern balcony">
+<pre>
+[img[pictures/guyseasternbalcony.jpg]]
+
+
+
+ &lt;&lt;heblink [[מהמרפסת המזרחית של גיא]]&gt;&gt;
+</pre>
+</div>
 <div created="20200426192715369" modified="20200503153817481" tags="[[Here in the Ghetto]] Houses Kitchens Laundry Windows" title="From the kitchen's window">
 <pre>[img[pictures/kitchenswindow.jpg]]
 
@@ -11564,8 +11575,7 @@ I don't follow my neighbors, god forbidden, but I certainly see them.
  &lt;&lt;heblink [[מהחלון של המטבח]]&gt;&gt;</pre>
 </div>
 <div created="20210104140803643" modified="20210104141647386" tags="[[Corona beings]] [[Here in the Ghetto]] Kitchens Windows Houses" title="From the kitchen's window 2">
-<pre>
-[img[pictures/kitchenswindow2.jpg]]
+<pre>[img[pictures/kitchenswindow2.jpg]]
 
 
 
