--- a/english.html
+++ b/english.html
@@ -993,6 +993,8 @@ Error message and password prompt
 
 <li>Rosh Hashana dinner</li>
 
+<li>Rothschild Blvd &amp; Balfour St</li>
+
 <li>Rushell</li>
 
 <li>Ruth's garden</li>
@@ -9208,7 +9210,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Rothschild Blvd &amp; Balfour St]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11481,7 +11483,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20210127184052229" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20210204161159295" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -11551,8 +11553,7 @@ The corona times have brought about a new routine to the tribal campfire, such a
 </pre>
 </div>
 <div created="20210127183851311" modified="20210127184335142" tags="[[Here in the Ghetto]] Houses [[Corona beings]]" title="From Guy's eastern balcony">
-<pre>
-[img[pictures/guyseasternbalcony.jpg]]
+<pre>[img[pictures/guyseasternbalcony.jpg]]
 
 
 
@@ -14715,6 +14716,16 @@ The building, the strings and what's between them.
 Rosh Hashana 2017 was really something. Meaning, in the end of the day it was great. The beginning was good, but in the middle, [[Gura]] became ill with certain bitternessis. The wine she drank did not do well on that matter. Genevieve and Rogge talked about the [[delicatessen|Delicatessen Chez Genevieve]]  that's gonna open up instead of [[the Couscous|The Couscous]]. The two of them talked calmly about the importance of the raw materials, because Genevieve wants to &quot;level up&quot; on that issue. Long story short, Gura gave a revolting speech about how &quot;all of you turned into feinschmeckers&quot;. She also mocked Iry and I and the [[matza balls|Matza ball soup]]: &quot;how far will you go? Where will you run to get a-one-day-old beet or a crab with an ancient taste?&quot; she screamed, stood up and walked to her room. Two hours later, when most of us were watching [[the last episode|An open ending]] of [[The Sopranos]]. Happy with ourselves. Full of food, drinks, indulgences and the terminal show she showed up looking at us. We smiled at her, she sat down between Eva and Philippe. It was great gummy-a-bearge
 
  &lt;&lt;heblink [[ארוחת ראש השנה]]&gt;&gt;</pre>
+</div>
+<div created="20210204161055123" modified="20210204161604308" tags="[[Here in the Ghetto]] [[Corona beings]] [[On the road to somewhere]] [[True stories]]" title="Rothschild Blvd &amp; Balfour St">
+<pre>
+[img[pictures/RothschildBlvd&amp;BalfourSt.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[רוטשילד-בלפור]]&gt;&gt;
+</pre>
 </div>
 <div created="20200202163339570" modified="20200218191641946" tags="[[Coen sister]] [[Single parent children]]" title="Rushell">
 <pre>[img[pictures/rachel.jpg]]
