--- a/index.html
+++ b/index.html
@@ -1353,6 +1353,8 @@ Error message and password prompt
 
 <li>רוטב בשאמל</li>
 
+<li>רוטשילד-בלפור</li>
+
 <li>רוממה</li>
 
 <li>רוסטביף</li>
@@ -9298,7 +9300,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="רקפות [[האחיות כהן]]" title="$:/StoryList">
+<div list="רוטשילד-בלפור רקפות [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10748,7 +10750,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20210127184157103" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20210204161252522" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -19963,6 +19965,16 @@ Fapina''
 &lt;&lt;englink [[Béchamel sauce]]&gt;&gt;
 </pre>
 </div>
+<div created="20210204160647990" modified="20210204164244354" tags="[[כאן בגטו]] [[הלכות קורונה]] [[בדרך לאן שהוא]] [[סיפורים אמיתיים]]" title="רוטשילד-בלפור">
+<pre>[img[pictures/RothschildBlvd&amp;BalfourSt.jpg]]
+
+!!![[אימא של ג'אז]]:
+
+לפני שישה שבועות מעדתי במעבר החצייה שברוטשילד פינת בלפור ונחבלתי די קשה. ניסיתי בימי ההחלמה לדמיין את גודל הבור וצורתו ומאיזו זווית חטפתי את המכה. הבוקר הלכתי לראות את הבור וזה אפילו לא בור, אבל אני יכולה לדמיין איך זה קרה.
+
+
+&lt;&lt;englink [[Rothschild Blvd &amp; Balfour St]]&gt;&gt;</pre>
+</div>
 <div created="20181107110533011" modified="20200320100329486" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] פעם סגירים" title="רוממה">
 <pre>[img[pictures/romema.jpg]]
 
@@ -20141,7 +20153,7 @@ Fapina''
 
 &lt;&lt;englink [[Rafi Műnz]]&gt;&gt;</pre>
 </div>
-<div created="20190122074755075" modified="20210202225011692" tags="[[סיפורים אמיתיים]] [[כאן בגטו]]" title="רקפות">
+<div created="20190122074755075" modified="20210203131140600" tags="[[סיפורים אמיתיים]] [[כאן בגטו]]" title="רקפות">
 <pre>[img[pictures/rakafot.jpg]]
 
 !!![[אימא של ג'אז]]:
