--- a/english.html
+++ b/english.html
@@ -429,6 +429,8 @@ Error message and password prompt
 
 <li>Coffee and Candies</li>
 
+<li>Colorful kitchen</li>
+
 <li>Comprehensive or compulsive</li>
 
 <li>Corona beings</li>
@@ -9210,7 +9212,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Rothschild Blvd &amp; Balfour St]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10822,6 +10824,15 @@ It's already November, [[Wyclef|Wyclef Jean]] should have come back by now. It's
 
  &lt;&lt;heblink [[קפה וממתקים]]&gt;&gt;</pre>
 </div>
+<div created="20210209185429829" modified="20210209185602744" tags="Kitchens Houses [[Corona beings]] [[Food addicts]]" title="Colorful kitchen">
+<pre>
+[img[pictures/colorfulkitchen.jpg]]
+
+
+
+ &lt;&lt;heblink [[מטבח צבעוני]]&gt;&gt;
+</pre>
+</div>
 <div created="20200217203006778" modified="20200304124940311" tags="[[Monkeys with car keys]]" title="Comprehensive or compulsive">
 <pre>[img[pictures/spiritual-level.jpg]]
 
@@ -11483,7 +11494,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20210204161159295" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20210209185538954" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -14717,7 +14728,7 @@ Rosh Hashana 2017 was really something. Meaning, in the end of the day it was gr
 
  &lt;&lt;heblink [[ארוחת ראש השנה]]&gt;&gt;</pre>
 </div>
-<div created="20210204161055123" modified="20210204161604308" tags="[[Here in the Ghetto]] [[Corona beings]] [[On the road to somewhere]] [[True stories]]" title="Rothschild Blvd &amp; Balfour St">
+<div created="20210204161055123" modified="20210205115053361" tags="[[Here in the Ghetto]] [[Corona beings]] [[On the road to somewhere]] [[True stories]] [[Menopause sisters]]" title="Rothschild Blvd &amp; Balfour St">
 <pre>
 [img[pictures/RothschildBlvd&amp;BalfourSt.jpg]]
 
