--- a/index.html
+++ b/index.html
@@ -261,6 +261,8 @@ Error message and password prompt
 
 <li>Born &amp; Raised</li>
 
+<li>Draft of 'New Tiddler'</li>
+
 <li>English</li>
 
 <li>HH</li>
@@ -1044,6 +1046,8 @@ Error message and password prompt
 <li>מחפשת את אירי</li>
 
 <li>מטא בדיון</li>
+
+<li>מטבח צבעוני</li>
 
 <li>מטבחים</li>
 
@@ -9300,7 +9304,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="רוטשילד-בלפור רקפות [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מטבח צבעוני]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9506,6 +9510,9 @@ tootdiv a:visited {text-decoration: none; color: #700}</pre>
 &lt;&lt;englink [[Born &amp; Raised]]&gt;&gt;
 
 </pre>
+</div>
+<div modified="20210209185141321" title="Draft of 'New Tiddler'">
+<pre></pre>
 </div>
 <div created="20161024110225652" modified="20161024125352292" tags="LTR" title="English">
 <pre>This item is in English.
@@ -10750,7 +10757,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20210204161252522" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20210209185636864" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -16553,6 +16560,16 @@ We rise to play a greater part.
 
 </pre>
 </div>
+<div created="20210209185022754" modified="20210209190238074" tags="מטבחים בתים [[הלכות קורונה]] [[חיות אוכל]]" title="מטבח צבעוני">
+<pre>[img[pictures/colorfulkitchen.jpg]]
+
+!!![[גורה]]:
+
+הקורונה הצליחה לייבש את שמחת היצירה שלי, ולא בא לי כלום חוץ מלצבוע, והכי יפה זה מטבחים, בעיקר כאלה עם חרכים ביניהם נופלים פירורים של כל מיני דברים לנצח, וארונות שאי אפשר לפתוח.
+
+&lt;&lt;englink [[Colorful kitchen]]&gt;&gt;
+</pre>
+</div>
 <div created="20190617131650064" modified="20200813150741824" tags="בתים [[חיות אוכל]] משפחות לחם" title="מטבחים">
 <pre>[img[pictures/kitchens.jpg]]
 
@@ -19965,7 +19982,7 @@ Fapina''
 &lt;&lt;englink [[Béchamel sauce]]&gt;&gt;
 </pre>
 </div>
-<div created="20210204160647990" modified="20210204164244354" tags="[[כאן בגטו]] [[הלכות קורונה]] [[בדרך לאן שהוא]] [[סיפורים אמיתיים]]" title="רוטשילד-בלפור">
+<div created="20210204160647990" modified="20210205115011610" tags="[[כאן בגטו]] [[הלכות קורונה]] [[בדרך לאן שהוא]] [[סיפורים אמיתיים]] [[האחיות בלות]]" title="רוטשילד-בלפור">
 <pre>[img[pictures/RothschildBlvd&amp;BalfourSt.jpg]]
 
 !!![[אימא של ג'אז]]:
@@ -20153,12 +20170,12 @@ Fapina''
 
 &lt;&lt;englink [[Rafi Műnz]]&gt;&gt;</pre>
 </div>
-<div created="20190122074755075" modified="20210203131140600" tags="[[סיפורים אמיתיים]] [[כאן בגטו]]" title="רקפות">
+<div created="20190122074755075" modified="20210205115236253" tags="[[סיפורים אמיתיים]] [[כאן בגטו]]" title="רקפות">
 <pre>[img[pictures/rakafot.jpg]]
 
 !!![[אימא של ג'אז]]:
 
-בחורף הגשום למדי, על האדמה הסלעית, מתחת לעצי האלון הגדולים, בין עלים יבשים, בלוטים, ספלולים, מקלות בגדלים שונים - [[צומחות לפלא רקפות נחמדות מאד|https://www.youtube.com/watch?v=jSyIEPBUsZo]].
+בחורף גשום למדי, על אדמה סלעית, מתחת לעצי האלון גדולים - [[צומחות לפלא רקפות נחמדות מאד|https://www.youtube.com/watch?v=jSyIEPBUsZo]].
 
 
 
