--- a/index.html
+++ b/index.html
@@ -261,8 +261,6 @@ Error message and password prompt
 
 <li>Born &amp; Raised</li>
 
-<li>Draft of 'New Tiddler'</li>
-
 <li>English</li>
 
 <li>HH</li>
@@ -9304,7 +9302,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[מטבח צבעוני]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9510,9 +9508,6 @@ tootdiv a:visited {text-decoration: none; color: #700}</pre>
 &lt;&lt;englink [[Born &amp; Raised]]&gt;&gt;
 
 </pre>
-</div>
-<div modified="20210209185141321" title="Draft of 'New Tiddler'">
-<pre></pre>
 </div>
 <div created="20161024110225652" modified="20161024125352292" tags="LTR" title="English">
 <pre>This item is in English.
