--- a/english.html
+++ b/english.html
@@ -1239,6 +1239,8 @@ Error message and password prompt
 
 <li>Vincent Van Gogh</li>
 
+<li>Washing the grinder</li>
+
 <li>We Went to Mom's Memorial</li>
 
 <li>We were born</li>
@@ -9212,7 +9214,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Washing the grinder]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10825,8 +10827,7 @@ It's already November, [[Wyclef|Wyclef Jean]] should have come back by now. It's
  &lt;&lt;heblink [[קפה וממתקים]]&gt;&gt;</pre>
 </div>
 <div created="20210209185429829" modified="20210209185602744" tags="Kitchens Houses [[Corona beings]] [[Food addicts]]" title="Colorful kitchen">
-<pre>
-[img[pictures/colorfulkitchen.jpg]]
+<pre>[img[pictures/colorfulkitchen.jpg]]
 
 
 
@@ -11494,7 +11495,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20210209185538954" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20210223112625023" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -14729,8 +14730,7 @@ Rosh Hashana 2017 was really something. Meaning, in the end of the day it was gr
  &lt;&lt;heblink [[ארוחת ראש השנה]]&gt;&gt;</pre>
 </div>
 <div created="20210204161055123" modified="20210205115053361" tags="[[Here in the Ghetto]] [[Corona beings]] [[On the road to somewhere]] [[True stories]] [[Menopause sisters]]" title="Rothschild Blvd &amp; Balfour St">
-<pre>
-[img[pictures/RothschildBlvd&amp;BalfourSt.jpg]]
+<pre>[img[pictures/RothschildBlvd&amp;BalfourSt.jpg]]
 
 
 
@@ -16655,6 +16655,15 @@ If I need anything, I message friends on [[Etherpad|https://etherpad.org/]].
 
 
  &lt;&lt;heblink [[וינסנט ואן-גוך]]&gt;&gt;</pre>
+</div>
+<div created="20210223112454456" modified="20210223112651157" tags="Laundry [[Here in the Ghetto]] Kitchens Houses [[Life is for those who can't deal with drugs]]" title="Washing the grinder">
+<pre>
+[img[pictures/washingthegrinder.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[מכבס את הגריינדר]]&gt;&gt;</pre>
 </div>
 <div created="20200215190802119" modified="20200426142044011" tags="[[The Baumans]] Mothers Houses [[I would like to apologize]] [[On the road to somewhere]] Families" title="We Went to Mom's Memorial">
 <pre>[img[pictures/haazkara-shel-ima.jpg]] 
