--- a/index.html
+++ b/index.html
@@ -1063,6 +1063,8 @@ Error message and password prompt
 
 <li>מישל גונדרי</li>
 
+<li>מכבס את הגריינדר</li>
+
 <li>מכולת האחים</li>
 
 <li>מכוניות כאן</li>
@@ -9302,7 +9304,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מכבס את הגריינדר]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10752,7 +10754,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20210209185636864" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20210223112802473" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -16685,6 +16687,36 @@ We rise to play a greater part.
 &lt;&lt;englink [[Michel Gondry]]&gt;&gt;
 
 
+</pre>
+</div>
+<div created="20210223111104316" modified="20210223113328568" tags="כביסה [[כאן בגטו]] [[החיים נועדו למי שלא יכול להתמודד עם סמים]] בתים מטבחים" title="מכבס את הגריינדר">
+<pre>
+[img[pictures/washingthegrinder.jpg]]
+
+!!![[תומר]]:
+
+כשהגריינדר נתקע מתהווה קופרודוקציה ביתית, בה המטבח מארח את אבקת הכביסה והגריינדר,כי אבקת כביסה מפרקת הכול. 
+
+סדר הפעולות:
+
+
+1. מחממים את התמי.
+
+2. מניחים גריינדר מפורק בכד המידה.
+
+3. מפזרים מעל אבקת כביסה כדי כיסוי הגריינדר.
+
+4. ממלאים את הכד מהמים החמים.
+
+5. משרים עד שהמים כבר לא חמים.
+
+6. שוטפים את הגריינדר המבהיק במי ברז.
+
+7. מניחים לייבוש על החלק העליון והחמים של התמי.
+
+
+
+&lt;&lt;englink [[Washing the grinder]]&gt;&gt;
 </pre>
 </div>
 <div created="20200405102558367" modified="20200502120144065" tags="[[כאן בגטו]] [[חיות אוכל]] [[בדרך לאן שהוא]] [[הלכות קורונה]] מסעדות לחם" title="מכולת האחים">
