valhalla an achsan

--- a/index.html
+++ b/index.html
@@ -351,6 +351,8 @@ Error message and password prompt
 
 <li>אחיות לחושן</li>
 
+<li>אַחְסַן מִן בַּלַאש أحسن من بَلَاش – יותר טוב מכלום</li>
+
 <li>איזדורה דאנקן</li>
 
 <li>איילה מלאך פיינס</li>
@@ -1372,6 +1374,8 @@ Error message and password prompt
 <li>רן יגיל</li>
 
 <li>רפי מינץ</li>
+
+<li>רציחות בוולהאלה</li>
 
 <li>רקפות</li>
 
@@ -9304,7 +9308,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[מכבס את הגריינדר]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[רציחות בוולהאלה]] [[אַחְסַן מִן בַּלַאש أحسن من بَلَاش – יותר טוב מכלום]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9324,7 +9328,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20210202225000216" title="$:/temp/search">
+<div created="20161023184814872" modified="20210226103741184" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10364,6 +10368,18 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Breastplate sisters]]&gt;&gt;</pre>
 </div>
+<div created="20210225133844946" modified="20210226135049839" tags="סדרות [[טיפולים מהספה]] טלוויזיה" title="אַחְסַן מִן בַּלַאש أحسن من بَلَاش – יותר טוב מכלום">
+<pre>[img[pictures/achsanminbalash.jpg]]
+
+!!![[ראשל]]:
+
+התמהיל הסיפורי שגיבורו בלש טוטאלי, מאותגר חברתית ברמה כזו או אחרת, ובעל חושים חדים ואינטואיציה מפותחת, הוא אחסן מן אחסן. הבלש, שיכול להיות גם איסלנדי, פיני, בלגי שהיגר מטורקיה, מגיע בתחילת הפרק לזירת רצח, שתתברר, מיד או בהמשך, כזירה של רוצח סידרתי - לפעמים כזה שכבר פעל בעבר, לעתים צץ חקיין. אל הבלש שיכול להיות במטרופולין או בקרת, ייצטרף בלש או בלשית חדשה, שהוא אינו שש לבואה, והם יוצאים לדרך. יש להם בוס ולבוס יש בוס, ומישהו שם למעלה מושך בחוטים. יש להם גם איש מחשבים שהוא האקר ברשות החוק, פתולוג מעט מוזר ומגניב, אנשי קשר, בני משפחה, בעיות אישיות, ועלילות שנשזרות זו בזו. עד לרגע האחרון הצופה במתח, חושד בדמויות השונות המעוררות חשד, ויודע שכבר ראה את הפושע ממש בתחילת הסידרה, והוא דווקא חשד בו קצת אבל הספיק לשכוח מזה. ליבנו יוצא אל הקורבנות, בין צמד הבלשים מתחזקת רעות שכזאת, אנחנו רוצים גם להיות בלשים, ועד לאז צופים בסדרות.
+
+
+
+
+&lt;&lt;englink [[Achsan min balash - أحسن من بَلَاش - Better then nothing]]&gt;&gt;</pre>
+</div>
 <div created="20170731120559711" modified="20200219200735654" tags="[[אירי טוענת]] [[אחיות חוץ]]" title="איזדורה דאנקן">
 <pre>[img[pictures/isadora-duncan.jpg]]
 
@@ -10754,7 +10770,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20210223112802473" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20210225200403585" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -16689,9 +16705,8 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20210223111104316" modified="20210223113328568" tags="כביסה [[כאן בגטו]] [[החיים נועדו למי שלא יכול להתמודד עם סמים]] בתים מטבחים" title="מכבס את הגריינדר">
-<pre>
-[img[pictures/washingthegrinder.jpg]]
+<div created="20210223111104316" modified="20210223113624910" tags="כביסה [[כאן בגטו]] [[החיים נועדו למי שלא יכול להתמודד עם סמים]] בתים מטבחים מתכונים" title="מכבס את הגריינדר">
+<pre>[img[pictures/washingthegrinder.jpg]]
 
 !!![[תומר]]:
 
@@ -20196,6 +20211,23 @@ Fapina''
 
 
 &lt;&lt;englink [[Rafi Műnz]]&gt;&gt;</pre>
+</div>
+<div created="20210225195510037" modified="20210226134449040" tags="סדרות טלוויזיה ילדים משפחות [[קופים ממונעים]]" title="רציחות בוולהאלה">
+<pre>
+[img[pictures/TheValhallaMurders.jpg]]
+
+!!![[ראשל]]:
+
+&quot;אני לא בטוח איך אני יכול לתאר את זה לאלו שמעולם לא התנסו במשהו כזה&quot;, מספר ויהאר יונסן לכתבת הטלוויזיה בסידרה [[רציחות בוולהאלה|https://en.wikipedia.org/wiki/The_Valhalla_Murders]], &quot;אבל כשאתה חשוף למכות ולאלימות בגיל כ&quot;כ צעיר, הכל, איכשהו, נעשה מטורף בראש שלך&quot;.
+
+במתן העדות הטלוויזיונית הזאת, שמתרחשת בערך באמצע הפרק הרביעי של הסידרה, יושב ליד ויהאר,  בנדיקט גסטון, שלא פוצה פה ומתפתל למשמע מילותיו של ויהאר, שחושף לראשונה את התופת שעברו ילדי בית הילדים וולהאלה. הם כבר אנשים בוגרים. ויהאר הוא נהג אוטובוס ובנדיקט מהנדס, ושניהם הצליחו לשרוד ולחיות חיים נורמטיביים פחות או יותר, תוך שכלאו בתוכם את הסיפור הנוראי, עד לרגע מכונן זה, בסידרה הרגישה, שראשיתה רצח.
+
+
+
+
+
+&lt;&lt;englink [[The Valhalla Murders]]&gt;&gt;
+</pre>
 </div>
 <div created="20190122074755075" modified="20210205115236253" tags="[[סיפורים אמיתיים]] [[כאן בגטו]]" title="רקפות">
 <pre>[img[pictures/rakafot.jpg]]
