--- a/english.html
+++ b/english.html
@@ -271,6 +271,8 @@ Error message and password prompt
 
 <li>Abraham Hostel</li>
 
+<li>Achsan min balash - أحسن من بَلَاش - Better then nothing</li>
+
 <li>Acram Hummus</li>
 
 <li>Alan Ball</li>
@@ -1172,6 +1174,8 @@ Error message and password prompt
 <li>The Sopranos</li>
 
 <li>The team</li>
+
+<li>The Valhalla Murders</li>
 
 <li>The Wire</li>
 
@@ -9214,7 +9218,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Washing the grinder]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Achsan min balash - أحسن من بَلَاش - Better then nothing]] [[The Valhalla Murders]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9573,6 +9577,19 @@ Two weeks before, my lovely wife bought for her and me tickets to a [[Kutiman|ht
 
 
 
+</pre>
+</div>
+<div created="20210225133909312" modified="20210225200330384" tags="TV [[TV Series]] [[Sofa therapy]]" title="Achsan min balash - أحسن من بَلَاش - Better then nothing">
+<pre>
+
+[img[pictures/achsanminbalash.jpg]]
+
+
+
+
+
+
+ &lt;&lt;heblink [[אַחְסַן מִן בַּלַאש أحسن من بَلَاش – יותר טוב מכלום]]&gt;&gt;
 </pre>
 </div>
 <div created="20200223161655299" modified="20200426140032522" tags="[[Here in the Ghetto]] Restaurants Kitchens [[Food addicts]] Families" title="Acram Hummus">
@@ -11495,7 +11512,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20210223112625023" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20210225200252841" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -16242,6 +16259,15 @@ The team is us, who live in the renovated rental contract [[apartment|Wishing st
 
 </pre>
 </div>
+<div created="20210225195424357" modified="20210225200006443" tags="Families Children [[TV Series]] TV [[Monkeys with car keys]]" title="The Valhalla Murders">
+<pre>
+[img[pictures/TheValhallaMurders.jpg]]
+
+
+
+ &lt;&lt;heblink [[רציחות בוולהאלה]]&gt;&gt;
+</pre>
+</div>
 <div created="20200216170034035" modified="20200531103331476" tags="TV [[TV Series]] [[Life is for those who can't deal with drugs]]" title="The Wire">
 <pre>[img[pictures/the-wire.jpg]]
 
@@ -16656,9 +16682,8 @@ If I need anything, I message friends on [[Etherpad|https://etherpad.org/]].
 
  &lt;&lt;heblink [[וינסנט ואן-גוך]]&gt;&gt;</pre>
 </div>
-<div created="20210223112454456" modified="20210223112651157" tags="Laundry [[Here in the Ghetto]] Kitchens Houses [[Life is for those who can't deal with drugs]]" title="Washing the grinder">
-<pre>
-[img[pictures/washingthegrinder.jpg]]
+<div created="20210223112454456" modified="20210223113659846" tags="Laundry [[Here in the Ghetto]] Kitchens Houses [[Life is for those who can't deal with drugs]] Recipes" title="Washing the grinder">
+<pre>[img[pictures/washingthegrinder.jpg]]
 
 
 
