--- a/index.html
+++ b/index.html
@@ -9308,7 +9308,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[רציחות בוולהאלה]] [[אַחְסַן מִן בַּלַאש أحسن من بَلَاش – יותר טוב מכלום]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[רציחות בוולהאלה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10368,12 +10368,12 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Breastplate sisters]]&gt;&gt;</pre>
 </div>
-<div created="20210225133844946" modified="20210226135814672" tags="סדרות [[טיפולים מהספה]] טלוויזיה" title="אַחְסַן מִן בַּלַאש أحسن من بَلَاش – יותר טוב מכלום">
+<div created="20210225133844946" modified="20210226140257151" tags="סדרות [[טיפולים מהספה]] טלוויזיה" title="אַחְסַן מִן בַּלַאש أحسن من بَلَاش – יותר טוב מכלום">
 <pre>[img[pictures/achsanminbalash.jpg]]
 
 !!![[ראשל]]:
 
-התמהיל הסיפורי שגיבורו בלש טוטאלי, מאותגר חברתית ברמה כזו או אחרת, ובעל חושים חדים ואינטואיציה מפותחת, הוא אחסן מן אחסן. הבלש, שיכול להיות גם איסלנדי, פיני, בלגי שהיגר מטורקיה, מגיע בתחילת הפרק לזירת רצח, שתתברר, מיד או בהמשך, כזירה של רוצח סידרתי - לפעמים כזה שכבר פעל בעבר, לעתים צץ חקיין. אל הבלש שיכול להיות במטרופולין או בקרת, ייצטרף בלש או בלשית חדשה, שהוא אינו שש לבואה, והם יוצאים לדרך. יש להם בוס ולבוס יש בוס, ומישהו שם למעלה מושך בחוטים. יש להם גם איש מחשבים שהוא האקר ברשות החוק, פתולוג מעט מוזר ומגניב, אנשי קשר, בני משפחה, בעיות אישיות, ועלילות שנשזרות זו בזו. עד לרגע האחרון הצופה במתח, חושד בדמויות השונות המעוררות חשד, ויודע שכבר ראה את הפושע ממש בתחילת הסידרה, והוא דווקא חשד בו קצת אבל הספיק לשכוח מזה. ליבנו יוצא אל הקורבנות, בין צמד הבלשים מתחזקת רעות שכזאת, אנחנו רוצים גם להיות בלשים בהלסינקי, ועד לאז צופים בסדרות.
+התמהיל הסיפורי שגיבורו בלש טוטאלי, מאותגר חברתית ברמה כזו או אחרת, ובעל חושים חדים ואינטואיציה מפותחת, הוא אחסן מן אחסן. הבלש, שיכול להיות גם איסלנדי, פיני, בלגי שהיגר מטורקיה, מגיע בתחילת הפרק לזירת רצח, שתתברר, מיד או בהמשך, כזירה של רוצח סידרתי - לפעמים כזה שכבר פעל בעבר, לעתים צץ חקיין. אל הבלש שיכול להיות במטרופולין או בקרת, ייצטרף בלש או בלשית חדשה, שהוא אינו שש לבואה, והם יוצאים לדרך. יש להם בוס ולבוס יש בוס, ומישהו שם למעלה מושך בחוטים. יש להם גם איש מחשבים שהוא האקר ברשות החוק, פתולוג מעט מוזר ומגניב, אנשי קשר, בני משפחה, בעיות אישיות, ועלילות שנשזרות זו בזו. עד לרגע האחרון הצופה במתח, חושד בדמויות השונות המעוררות חשד, ויודע שכבר ראה את הפושע ממש בתחילת הסידרה, והוא דווקא חשד בו קצת אבל הספיק לשכוח מזה. ליבנו יוצא אל הקורבנות, בין צמד הבלשים מתחזקת רעות שכזאת, אנחנו גם רוצים להיות בלשים בהלסינקי, אבל עד לאז צופים בסדרות.
 
 
 
