--- a/index.html
+++ b/index.html
@@ -9308,7 +9308,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[רציחות בוולהאלה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="שואה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9328,7 +9328,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20210226103741184" title="$:/temp/search">
+<div created="20161023184814872" modified="20210408201230676" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -18819,7 +18819,7 @@ May the lord bless your soul, I love you girl
 &lt;&lt;englink [[Cherry pie]]&gt;&gt;
 </pre>
 </div>
-<div created="20170629220725238" modified="20200813154050427" tags="[[כשהם ישנים]] [[חיות אוכל]] מתכונים אפייה" title="פאי נקטרין">
+<div created="20170629220725238" modified="20210408201226284" tags="[[כשהם ישנים]] [[חיות אוכל]] מתכונים אפייה" title="פאי נקטרין">
 <pre>[img[pictures/pie-naktarin.jpg]]
 
 !!![[אווה|אווה כהן]]:
@@ -18834,7 +18834,7 @@ May the lord bless your soul, I love you girl
 *6 כפות סוכר
 *4 חלמונים
 *כף מיץ לימון
-* שקיק כוסות קמח
+* שתי כוסות קמח
 *כפית אבקת אפייה
 
 2. מלית שקדים:
@@ -18847,7 +18847,7 @@ May the lord bless your soul, I love you girl
 *כפית סוכר וניל
 
 
-3. 7 נקטרינות פרוסות לפלחים
+3. 1 ק&quot;ג נקטרינות פרוסות לפלחים
 
 4. בצק שטרוייזל:
 
@@ -20213,8 +20213,7 @@ Fapina''
 &lt;&lt;englink [[Rafi Műnz]]&gt;&gt;</pre>
 </div>
 <div created="20210225195510037" modified="20210226134449040" tags="סדרות טלוויזיה ילדים משפחות [[קופים ממונעים]]" title="רציחות בוולהאלה">
-<pre>
-[img[pictures/TheValhallaMurders.jpg]]
+<pre>[img[pictures/TheValhallaMurders.jpg]]
 
 !!![[ראשל]]:
 
@@ -20416,14 +20415,14 @@ Fapina''
 &lt;&lt;englink [[Chez Panisse]]&gt;&gt;
 </pre>
 </div>
-<div created="20161219172718131" modified="20200727183232383" tags="HH [[סיפורים אמיתיים]] [[הכפר הגלובלי]]" title="שואה">
+<div created="20161219172718131" modified="20210228154058440" tags="HH [[סיפורים אמיתיים]] [[הכפר הגלובלי]]" title="שואה">
 <pre>[img[pictures/shoa.jpg]]
 
 
 !!![[הצוות]]:
 
 
-כל שואה לגופה
+כל שואה לגופה, אבל ישנה השואה.
 
 
 
