--- a/english.html
+++ b/english.html
@@ -337,6 +337,8 @@ Error message and password prompt
 
 <li>Birkat Cohanim</li>
 
+<li>Birthday</li>
+
 <li>Birthday cake</li>
 
 <li>Bishvil Haprachim</li>
@@ -9218,7 +9220,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Achsan min balash - أحسن من بَلَاش - Better then nothing]] [[The Valhalla Murders]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="Birthday [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9238,7 +9240,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20210104140802214" title="$:/temp/search">
+<div created="20161023184814872" modified="20210430204244003" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9581,7 +9583,6 @@ Two weeks before, my lovely wife bought for her and me tickets to a [[Kutiman|ht
 </div>
 <div created="20210225133909312" modified="20210225200330384" tags="TV [[TV Series]] [[Sofa therapy]]" title="Achsan min balash - أحسن من بَلَاش - Better then nothing">
 <pre>
-
 [img[pictures/achsanminbalash.jpg]]
 
 
@@ -10015,6 +10016,17 @@ On [[Purim|https://en.wikipedia.org/wiki/Purim]] 5780 I wanted to dress up as a 
 
 
  &lt;&lt;heblink [[ברכת כהנים]]&gt;&gt;</pre>
+</div>
+<div created="20210430203831810" modified="20210430210146870" tags="[[Here in the Ghetto]] [[True stories]] Houses Kitchens Mothers [[Menopause sisters]] Windows" title="Birthday">
+<pre>
+[img[pictures/birthay.jpg]]
+
+!!![[Jazz's mom]]:
+
+
+
+ &lt;&lt;heblink [[היום יום הולדת]]&gt;&gt;
+</pre>
 </div>
 <div created="20200306155442102" modified="20200901071502487" tags="Children Recipes [[When they sleep]] [[Food addicts]] Baking" title="Birthday cake">
 <pre>[img[pictures/birthday-cake.jpg]]
@@ -11512,7 +11524,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20210225200252841" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20210430204255850" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -16260,8 +16272,7 @@ The team is us, who live in the renovated rental contract [[apartment|Wishing st
 </pre>
 </div>
 <div created="20210225195424357" modified="20210225200006443" tags="Families Children [[TV Series]] TV [[Monkeys with car keys]]" title="The Valhalla Murders">
-<pre>
-[img[pictures/TheValhallaMurders.jpg]]
+<pre>[img[pictures/TheValhallaMurders.jpg]]
 
 
 
