--- a/index.html
+++ b/index.html
@@ -629,6 +629,8 @@ Error message and password prompt
 
 <li>החיים נועדו למי שלא יכול להתמודד עם סמים</li>
 
+<li>היום יום הולדת</li>
+
 <li>היועצת</li>
 
 <li>היסטריות</li>
@@ -9296,10 +9298,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20201101150419877" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20210430202203122" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20210128120039859" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20210430203152892" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9308,7 +9310,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="שואה [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[היום יום הולדת]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9328,7 +9330,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20210408201230676" title="$:/temp/search">
+<div created="20161023184814872" modified="20210430210201518" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10770,7 +10772,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20210225200403585" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20210430204352032" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -12913,6 +12915,17 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 
 </pre>
+</div>
+<div created="20210430201959612" modified="20210430210230635" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] מטבחים בתים אימהות [[האחיות בלות]] חלונות" title="היום יום הולדת">
+<pre>[img[pictures/birthay.jpg]]
+
+!!![[אימא של ג'אז]]:
+
+היום לפני 55 שנים נולדתי. בחצות האחד במאי 1966, תאריך אהוב עלי. ולאחר שחודשיים לא ציירתי אף ציור, בלי הרבה מאמץ קרה, שצילמתי את הפרחים [[שגיא|מהמרפסת המזרחית של גיא]] הביא לי, והמטבח נראה לי פתאום יפה.
+
+
+
+&lt;&lt;englink [[Birthday]]&gt;&gt;</pre>
 </div>
 <div created="20170319175820365" modified="20200628140511183" tags="HH" title="היועצת">
 <pre>[img[pictures/thecounselor.jpg]]
