to everything, i do park 2

--- a/english.html
+++ b/english.html
@@ -645,6 +645,8 @@ Error message and password prompt
 
 <li>I do park, too</li>
 
+<li>I do park, too 2</li>
+
 <li>I would like to apologize</li>
 
 <li>I, the psychiatrist</li>
@@ -1198,6 +1200,8 @@ Error message and password prompt
 <li>TLV</li>
 
 <li>To draw</li>
+
+<li>To everything there is a place</li>
 
 <li>Tomato salad</li>
 
@@ -9220,7 +9224,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Birthday [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[To everything there is a place]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9240,7 +9244,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20210430204244003" title="$:/temp/search">
+<div created="20161023184814872" modified="20210508094207003" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9582,8 +9586,7 @@ Two weeks before, my lovely wife bought for her and me tickets to a [[Kutiman|ht
 </pre>
 </div>
 <div created="20210225133909312" modified="20210225200330384" tags="TV [[TV Series]] [[Sofa therapy]]" title="Achsan min balash - أحسن من بَلَاش - Better then nothing">
-<pre>
-[img[pictures/achsanminbalash.jpg]]
+<pre>[img[pictures/achsanminbalash.jpg]]
 
 
 
@@ -10018,8 +10021,7 @@ On [[Purim|https://en.wikipedia.org/wiki/Purim]] 5780 I wanted to dress up as a 
  &lt;&lt;heblink [[ברכת כהנים]]&gt;&gt;</pre>
 </div>
 <div created="20210430203831810" modified="20210430210146870" tags="[[Here in the Ghetto]] [[True stories]] Houses Kitchens Mothers [[Menopause sisters]] Windows" title="Birthday">
-<pre>
-[img[pictures/birthay.jpg]]
+<pre>[img[pictures/birthay.jpg]]
 
 !!![[Jazz's mom]]:
 
@@ -11524,7 +11526,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20210430204255850" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20210508112950145" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -12316,11 +12318,19 @@ Yes you- killing machines, exterminating and dismissing all that's not in your f
 
 </pre>
 </div>
-<div created="20200308102019435" modified="20200308102154665" tags="[[On the road to somewhere]] Houses Laundry Metafiction" title="I do park, too">
+<div created="20200308102019435" modified="20210508102453165" tags="[[On the road to somewhere]] Houses Laundry Metafiction" title="I do park, too">
 <pre>[img[pictures/gam-ani-machane.jpg]]
 
 
  &lt;&lt;heblink [[גם אני מחנה]]&gt;&gt;</pre>
+</div>
+<div created="20210508110305887" modified="20210508110644119" tags="Houses [[On the road to somewhere]] Kitchens [[True stories]] Laundry" title="I do park, too 2">
+<pre>[img[pictures/idopark2.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[גם אני מחנה 2]]&gt;&gt;</pre>
 </div>
 <div created="20200212221326501" modified="20200410100124826" tags="[[On the road to somewhere]] [[True stories]] [[How many songs can you even invent at all]]" title="I would like to apologize">
 <pre>[img[pictures/ani-roza.jpg]]
@@ -16384,6 +16394,19 @@ The TLV is totally here in the ghetto, at the triangle between Ha Hashmonaim, Ca
 
 
  &lt;&lt;heblink [[לצייר]]&gt;&gt;</pre>
+</div>
+<div created="20210508111106392" modified="20210508114518242" tags="[[Here in the Ghetto]] Mothers [[Stories from the future]]" title="To everything there is a place">
+<pre>[img[pictures/to-everything-there.jpg]]
+
+''
+To everything there is a place,''
+'' and a drawer to every object under the ceiling.''
+''
+
+
+&lt;&lt;list-links filter:&quot;[tag[To everything there is a place]]&quot;&gt;&gt;
+
+ &lt;&lt;heblink [[לכל מקום, ומתלה לכל חפץ תחת גג הבית]]&gt;&gt;</pre>
 </div>
 <div created="20200306153138336" modified="20200306153254879" tags="Recipes [[Christmas dinner Recipes]] [[Vegan recipes]]" title="Tomato salad">
 <pre>[img[pictures/salat-agvanyot.jpg]]
