--- a/index.html
+++ b/index.html
@@ -12132,13 +12132,13 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20210508110000918" modified="20210508115236983" tags="[[בדרך לאן שהוא]] בתים כביסה מטבחים [[סיפורים אמיתיים]] אפייה" title="גם אני מחנה 2">
+<div created="20210508110000918" modified="20210508120324864" tags="[[בדרך לאן שהוא]] בתים כביסה מטבחים [[סיפורים אמיתיים]] אפייה" title="גם אני מחנה 2">
 <pre>
 [img[pictures/idopark2.jpg]]
 
 !!![[תומר]]:
 
-את שטחוני האמבט החמימים מהשמש, הנחתי לרגע על התנור הפועל, בדקתי אם [[הבייגל|טל בייגלס]] הפשיר והתחמם דיו, והמשכתי איתם למקומם [[שבחדר השינה|גם אני מחנה]].
+את שטיחוני האמבט החמימים מהשמש, הנחתי לרגע על התנור הפועל, בדקתי אם [[הבייגל|טל בייגלס]] הפשיר והתחמם דיו, והמשכתי איתם למקומם [[שבחדר השינה|גם אני מחנה]].
 
 
 
