--- a/index.html
+++ b/index.html
@@ -9305,7 +9305,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20210430202203122" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20210508115443298" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20210513182052833" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9314,7 +9314,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[לכל מקום, ומתלה לכל חפץ תחת גג הבית]] [[גם אני מחנה 2]] [[גם אני מחנה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="מיזונפלציה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9334,7 +9334,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20210508114953307" title="$:/temp/search">
+<div created="20161023184814872" modified="20210522134224964" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9585,7 +9585,7 @@ You see it written left to right because it is tagged `LTR` (uppercase).
 
 &lt;&lt;englink [[Jazz]]&gt;&gt;</pre>
 </div>
-<div created="20170624105324019" modified="20200215231929867" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="less is more">
+<div created="20170624105324019" modified="20210508132933038" tags="[[המטבח על פי ז'נבייב]] מטבחים [[לכל מקום, ומתלה לכל חפץ תחת גג הבית]] [[חיות אוכל]]" title="less is more">
 <pre>[img[pictures/less-is-more.jpg]]
 
 !!![[ז'נבייב]]:
@@ -10776,7 +10776,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20210508112820443" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20210513181848891" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -12133,8 +12133,7 @@ Is where I want to be
 </pre>
 </div>
 <div created="20210508110000918" modified="20210508120324864" tags="[[בדרך לאן שהוא]] בתים כביסה מטבחים [[סיפורים אמיתיים]] אפייה" title="גם אני מחנה 2">
-<pre>
-[img[pictures/idopark2.jpg]]
+<pre>[img[pictures/idopark2.jpg]]
 
 !!![[תומר]]:
 
@@ -12804,7 +12803,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 &lt;&lt;englink [[The Hostel]]&gt;&gt;
 </pre>
 </div>
-<div created="20170514230844769" modified="20200217201449163" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="ההיררכיה במקרר">
+<div created="20170514230844769" modified="20210508132510966" tags="[[המטבח על פי ז'נבייב]] מטבחים [[לכל מקום, ומתלה לכל חפץ תחת גג הבית]]" title="ההיררכיה במקרר">
 <pre>[img[pictures/bamekarer.jpg]]
 
 !!![[ז'נבייב]]:
@@ -16053,12 +16052,13 @@ We rise to play a greater part.
 &lt;&lt;englink [[Lemons]]&gt;&gt;
 </pre>
 </div>
-<div created="20210508112141288" modified="20210508115549129" tags="אימהות [[סיפורים מהעתיד]] [[כאן בגטו]]" title="לכל מקום, ומתלה לכל חפץ תחת גג הבית">
-<pre>
-[img[pictures/to-everything-there.jpg]]
+<div created="20210508112141288" modified="20210508141642422" tags="אימהות [[סיפורים מהעתיד]] [[כאן בגטו]]" title="לכל מקום, ומתלה לכל חפץ תחת גג הבית">
+<pre>[img[pictures/to-everything-there.jpg]]
 
+!!![[אימא של ג'אז]]:
 
-''המשך יבוא :)''
+הצעות, רעיונות והוראות חמורות, הנוגעות לשמירה על ביתנו וחיינו ראויים ונאותים, כי סדר חייב להיות. ועם המון אהבה כמובן.
+
 
 &lt;&lt;list-links filter:&quot;[tag[לכל מקום, ומתלה לכל חפץ תחת גג הבית]]&quot;&gt;&gt;
 
@@ -16644,7 +16644,7 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20170112174310883" modified="20200330164323925" tags="[[המטבח על פי ז'נבייב]] [[קופים ממונעים]] כביסה מטבחים [[כפות ידיים]]" title="מיזונפלציה">
+<div created="20170112174310883" modified="20210522134348954" tags="[[המטבח על פי ז'נבייב]] [[קופים ממונעים]] כביסה מטבחים [[כפות ידיים]] [[לכל מקום, ומתלה לכל חפץ תחת גג הבית]]" title="מיזונפלציה">
 <pre>[img[pictures/mizonplazya.jpg]]
 
 
@@ -16858,7 +16858,7 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Assuming and Preserving]]&gt;&gt;</pre>
 </div>
-<div created="20170114175718512" modified="20200330164345351" tags="[[המטבח על פי ז'נבייב]] מטבחים [[כפות ידיים]]" title="מנקים היטב">
+<div created="20170114175718512" modified="20210508132539378" tags="[[המטבח על פי ז'נבייב]] מטבחים [[כפות ידיים]] [[לכל מקום, ומתלה לכל חפץ תחת גג הבית]]" title="מנקים היטב">
 <pre>[img[pictures/menakim-heytev.jpg]]
 
 !!![[ז'נבייב]]:
@@ -20816,7 +20816,7 @@ Fapina''
 &lt;&lt;englink [[Green beans]]&gt;&gt;
 </pre>
 </div>
-<div created="20170820121344664" modified="20200219163208983" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="שערות לאחור">
+<div created="20170820121344664" modified="20210508135321022" tags="[[המטבח על פי ז'נבייב]] מטבחים [[לכל מקום, ומתלה לכל חפץ תחת גג הבית]]" title="שערות לאחור">
 <pre>[img[pictures/searot-leachor.jpg]]
 
 !!![[ז'נבייב]]:
