flowers in the kitchen

--- a/english.html
+++ b/english.html
@@ -533,6 +533,8 @@ Error message and password prompt
 
 <li>Flip-flopping</li>
 
+<li>Flowers in the kitchen</li>
+
 <li>Food addicts</li>
 
 <li>From Eyal Shani's kitchen</li>
@@ -9224,7 +9226,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Misenplation [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Flowers in the kitchen]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11526,7 +11528,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20210513181725336" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20210629173158022" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -11559,6 +11561,18 @@ At the moment I saw sweet [[Angelic]] she looked beautiful to me, but I was sure
 
 
  &lt;&lt;heblink [[תהפוכת]]&gt;&gt;
+</pre>
+</div>
+<div created="20210629173051973" modified="20210629173237261" tags="Kitchens Houses [[Here in the Ghetto]]" title="Flowers in the kitchen">
+<pre>
+
+[img[pictures/flowersinthekitchen.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[פרחים במטבח]]&gt;&gt;
+
 </pre>
 </div>
 <div created="20200213154202937" modified="20200502115602922" tags="Kitchens [[Monkeys with car keys]] Coffee [[Life is for those who can't deal with drugs]] Bread" title="Food addicts">
