--- a/index.html
+++ b/index.html
@@ -1309,6 +1309,8 @@ Error message and password prompt
 
 <li>פפינה</li>
 
+<li>פרחים במטבח</li>
+
 <li>פרינס</li>
 
 <li>צ'ילי כמו קארנה</li>
@@ -9314,7 +9316,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="מיזונפלציה [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[פרחים במטבח]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10776,7 +10778,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20210513181848891" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20210629173402743" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -19416,6 +19418,15 @@ Fapina''
 
 &lt;&lt;englink [[Fapina]]&gt;&gt;
 
+
+</pre>
+</div>
+<div created="20210629172953953" modified="20210629173423996" tags="מטבחים בתים [[כאן בגטו]]" title="פרחים במטבח">
+<pre>
+[img[pictures/flowersinthekitchen.jpg]]
+
+
+&lt;&lt;englink [[Flowers in the kitchen]]&gt;&gt;
 
 </pre>
 </div>
